--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "$react-dom"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@sanity/image-url": "^1.1.0",
@@ -27,7 +28,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.456.0",
     "markdown-it": "^14.1.0",
-    "next": "15.0.3",
+    "next": "^15.0.4-canary.24",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.8.3-canary.1",
     "react": "19.0.0-rc-66855b96-20241106",
